--- a/index.html
+++ b/index.html
@@ -1,11 +1,70 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Event Planner | Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>home page</h1>
+
+<header>
+    <h1>Event Planner</h1>
+    <nav>
+        <!-- BOTH go to role select -->
+        <a href="role-select.html">Login</a>
+    </nav>
+</header>
+
+<section class="hero">
+    <div class="img">
+        <h2>Plan Any Event Seamlessly</h2>
+        <p>Premium Venues • Elite Catering • Designer Decor</p>
+        <!-- CTA also goes to role select -->
+        <a href="role-select.html">
+            <button style="width:220px;margin-top:15px;cursor:pointer;">
+                Start Planning Today
+            </button>
+        </a>
+    </div>
+</section>
+
+<section class="features" style="background:#e0f2f1;text-align:center;">
+    <div class="feature-card">
+        <h2>150+</h2>
+        <p>Verified Vendors</p>
+    </div>
+    <div class="feature-card">
+        <h2>2,000+</h2>
+        <p>Events Completed</p>
+    </div>
+    <div class="feature-card">
+        <h2>10k+</h2>
+        <p>Happy Customers</p>
+    </div>
+</section>
+
+<section class="features">
+    <div class="feature-card">
+        <h3>Wedding Packages</h3>
+        <p>From intimate ceremonies to grand receptions.</p>
+    </div>
+    <div class="feature-card">
+        <h3>Corporate Events</h3>
+        <p>Professional seminars and conferences.</p>
+    </div>
+    <div class="feature-card">
+        <h3>Private Parties</h3>
+        <p>Birthdays, anniversaries, and themed parties.</p>
+    </div>
+    <div class="feature-card">
+        <h3>AI Planner</h3>
+        <p>Smart vendor recommendations.</p>
+    </div>
+</section>
+
+<footer>© 2026 Event Planner</footer>
+
 </body>
 </html>
