--- a/vendor-dashboard.html
+++ b/vendor-dashboard.html
@@ -20,9 +20,11 @@
 <div class="feature-card"><h3>Reviews</h3><button onclick="vendorFeedback()">View Reviews</button></div>
 </section>
 <!-- ADD this button inside vendor-dashboard.html -->
-<button onclick="window.location.href='chatbot.html'">
-    💬 Chat with EventBot
+<button onclick="window.location.href='chatbot.html'"
+        style="background:#FC5C65;margin-top:10px;">
+    🤖 Ask EventBot
 </button>
+
 
 
 <footer>© 2026 Event Planner</footer>
