--- a/vendors.html
+++ b/vendors.html
@@ -58,10 +58,11 @@
 
 <!-- CHATBOT ACCESS -->
 <div style="text-align:center;margin-bottom:40px;">
-    <button onclick="window.location.href='chatbot.html'" 
-            style="width:260px;background:#FC5C65;">
-            Chat with EventBot
-    </button>
+    <button onclick="window.location.href='chatbot.html'"
+        style="background:#FC5C65;margin-top:10px;">
+    🤖 Ask EventBot (AI Recommendation)
+</button>
+
 </div>
 
 <footer>© 2026 Event Planner</footer>
